--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mapbox/mapbox-sdk": "^0.16.1",
     "@turf/turf": "^7.2.0",
     "@types/chart.js": "^2.9.41",
+    "@types/d3": "^7.4.3",
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "express": "^5.1.0",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.5",
@@ -32,12 +35,11 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "simpleheat": "^0.4.0",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
-    "zustand": "^5.0.3",
-    "simpleheat": "^0.4.0",
-    "d3-hexbin": "^0.2.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
